# Lidar-Obstacle-Detection

./: .gitignore  CMakeLists.txt  README.md
lectures/: lec1-3-clustering-obstacles.md
src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
src/quiz/cluster/: CMakeLists.txt  cluster.cpp  kdtree.h
src/quiz/ransac/: CMakeLists.txt  ransac2d.cpp
src/render/: box.h  render.cpp  render.h
src/sensors/: lidar.h
